Fix formatting of extra lines and spaces for layout. Finalize styling for desktop layout where only to container scroll down. Remove error icons when screen is too small.

--- a/public/styles/desktop-layout.css
+++ b/public/styles/desktop-layout.css
@@ -1,21 +1,42 @@
 @media only screen and (min-width: 1024px) {
-  body {
+
+  .nav-spacer {
+    margin-top: 10rem;
     flex-direction: row;
     font-size: 20px;
   }
 
-  .nav-bar{
+  .nav-bar {
     background-color: #4056A1;
   }
 
-  .header {
-    margin-top: 10vh;
+  header {
+    display: flex;
+    position: sticky;
+    width: 60%;
+    top: 12rem;
+    margin-left: 3vw;
+    padding: 2rem 4rem;
+    border-radius: 5%;
+    align-self: flex-start;
   }
 
   .container {
-    margin-top: 20vh;
     padding-left: 4rem;
     padding-right: 4rem;
+  }
+}
 
+@media only screen and (min-width: 1024px) and (max-width: 1530px) {
+
+  #error i {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 940px) {
+
+  #error i {
+    display: none;
   }
 }
