--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -20,20 +20,23 @@ body {
   background-color: #f4f1ec;
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 24px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
- .container {
-  width: 90%;
+.nav-spacer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 90%;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center; */
 }
 
 /*
